<resources>
    <string name="app_name">Media Notification</string>
    <string name="title_settings">Customize</string>
    <string name="title_players">Players</string>
    <string name="title_supported_players">Supported Players</string>
    <string name="title_all">All</string>
    <string name="title_help">Help / FAQ</string>
    <string name="title_media_notification">Enable Custom Media Notifications</string>
    <string name="title_high_contrast_text">High Contrast Text/Icons</string>
    <string name="title_color_method">Preferred Color Type</string>
    <string name="title_custom_color">Default Color</string>
    <string name="app_name_spotify">Spotify</string>
    <string name="desc_check_permission">If your device is rooted, it could be possible to allow the app to block and unblock media apps on its own by granting it the permission android.permission.UPDATE_APP_OPS_STATS. That said, it is not currently possible to include that feature in this app, as it under signature protection.</string>
    <string name="title_grant_permission">Grant Permission</string>
    <string name="desc_storage">In order to fetch album art, the app will occasionally need access to the external storage. To grant this permission, press the button below and press \'allow\'.</string>
    <string name="desc_receiver">If you do not have root access, you can still block the notifications of music apps yourself and tell the app to rely entirely on a broadcast receiver by toggling the switch below. This may result in the app becoming unstable and unreliable when used with some music apps, and control buttons may not function properly as the app will be unable to trigger them through the music app\'s notification.</string>
    <string name="title_receiver">Use Broadcast Receiver</string>
    <string name="msg_permission_granted">Success! Permission granted.</string>
    <string name="msg_app_ops_denied">android.permission.UPDATE_APP_OPS_STATS is not granted.</string>
    <string name="title_check_permission">Check Permission</string>
    <string name="title_last_fm">Fetch missing album art from Last.fm</string>
    <string name="msg_readme_error">Couldn\'t fetch README: %s</string>
    <string name="title_default_player">Default Music Player</string>
    <string name="desc_default_player">If the app cannot detect a music player when the notification is clicked on, then you can set a default app for it to launch instead.</string>
    <string name="title_always_dismissible">Always Make Notification Dismissible</string>
    <string name="title_kill_process">Kill Processes On Dismiss (Unsafe)</string>
    <string name="msg_reflection_error">Could not send the key event through reflection: %s</string>
    <string name="title_media_controls">Media Controls Method (Unreliable)</string>
    <string name="desc_media_controls">This allows you to specify a method to use to control the music player if the app cannot figure out which app is currently playing music or does not have any other way to control it.</string>
    <string name="action_load_all_apps">Load All Apps</string>
    <string name="title_album_art">Show Album Art</string>
    <string name="action_github">View GitHub Repository</string>
    <string name="title_inverse_text">Use Inverted Text Colors</string>
    <string name="title_contributors">Contributors</string>
    <string name="action_about">About</string>
    <string name="msg_vuk">Huge thanks to the legendary Vukašin Anđelković for making this beautiful app icon.</string>
    <string name="title_libraries">Libraries</string>
    <string name="title_glide">Glide</string>
    <string name="desc_glide">An image loading and caching library for Android focused on smooth scrolling.</string>
    <string name="msg_open_source">Want to help contribute as well? This project is open source on GitHub.</string>
    <string name="title_cancel_original_notification">Attempt To Cancel Original Notification Normally</string>
    <string name="title_appearance_settings">Appearance Settings</string>
    <string name="title_settings_behavior">Behavior Settings</string>
    <string name="title_force_md_icons">Force Material Design Playback Icons</string>
    <string name="title_external_storage">External Storage</string>
    <string name="action_open">Open</string>
    <string name="action_set_default">Set Default</string>
    <string name="title_default">Default</string>
    <string name="title_markwon">Markwon</string>
    <string name="desc_markwon">A library for Android that renders markdown as system-native Spannables.</string>
    <string name="title_welcome">Welcome</string>
    <string name="desc_tutorial">Media Notification is an app that recreates Android Oreo\'s colorful media notifications on pre-Oreo devices. Please note that this app does not replace notifications from other apps; it creates its own. To see all available options and use cases, visit the Help section or press Learn More.</string>
    <string name="title_learn_more">Learn more</string>
    <string name="title_got_it">Got it</string>
    <string name="title_tutorial_players">App-Specific Settings</string>
    <string name="desc_tutorial_player">This screen lists all of the apps currently installed on your phone. The switches to the right of each app allow you to enable or disable Media Notification when that app is playing. If the switch is turned off, Media Notification will not do anything as a result of any notifications or broadcasts from that app.</string>
    <string name="desc_tutorial_players_supported">The \'supported players\' section contains apps that are officially supported by Media Notification. The \'all\' section contains everything else. Unfortunately, it is not possible to include only music players in this list as there is currently no reliable method of determining whether an app plays music or not.</string>
    <string name="desc_tutorial_players_default">Setting an app as the default player will cause Media Notification to assume that app is playing if it is unable to find the current player through any other method.</string>
    <string name="title_show_tutorials">Show Intro Sections</string>

    <string-array name="array_color_methods">
        <item>Dominant</item>
        <item>Primary</item>
        <item>Vibrant</item>
        <item>Muted</item>
        <item>Always Default</item>
    </string-array>

    <string-array name="array_control_methods">
        <item>Default (None)</item>
        <item>AudioManager API</item>
        <item>Reflection (Unstable)</item>
        <item>Broadcast</item>
        <item>Broadcast String</item>
        <item>Broadcast Parcelable</item>
    </string-array>

</resources>