<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

        <LinearLayout
            android:id="@+id/tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/title_welcome"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/desc_tutorial"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/tutorialLearnMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/title_learn_more" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/tutorialOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_got_it" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#1FFFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/mediaNotificationSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/title_media_notification"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/about"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_tutorial" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/storagePermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="16dp"
                android:background="#1FFFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/title_external_storage"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/desc_storage"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/storagePermissionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/title_grant_permission" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#1FFFFFFF" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_appearance_settings"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_color_method"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/colorMethodSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/customColorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_custom_color"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp" />

            <james.medianotification.views.ColorImageView
                android:id="@+id/customColor"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="16dp" />

        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/inverseTextSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_inverse_text"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/highContrastSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_high_contrast_text"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/forceMdIcons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_force_md_icons"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/albumArtSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_album_art"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/lastFmSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_last_fm"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_settings_behavior"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/alwaysDismissibleSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_always_dismissible"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/killProcessSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_kill_process"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/cancelOriginalNotificationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_cancel_original_notification"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/mediaControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_media_controls"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_media_controls"
                android:textColor="?android:textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rootPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="16dp"
                android:background="#1FFFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/title_check_permission"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/desc_check_permission"
                android:textSize="14sp" />

            <Button
                android:id="@+id/rootPermissionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/title_check_permission" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#1FFFFFFF" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/desc_receiver" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/receiverSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_receiver"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>