<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/title_tutorial_players"
        android:textColor="?android:textColorPrimary"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/desc_tutorial_player"
        android:textSize="14sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/tutorialOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/title_got_it" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#1FFFFFFF" />

</LinearLayout>